JsonParsing fixed, RAM optimization
*Fixed handleCallbacks for working with json's paths

*Added buffer for user-drawn pictures

*Made SimpleArrayBuilders static and added stop function for deleting the arrays from heap

*Added callbacks for text and scrollN

*Made 'text' and 'scrollN' global

*Increased BSSL buffer & response size to 4096

--- a/platformio.ini
+++ b/platformio.ini
@@ -10,6 +10,7 @@
 
 [env:nodemcuv2]
 platform = espressif8266@3.0.0
+build_flags = -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
 board = nodemcuv2
 framework = arduino
 lib_deps = 
