--- a/platformio.ini
+++ b/platformio.ini
@@ -14,5 +14,5 @@ build_flags = -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
 board = nodemcuv2
 framework = arduino
 lib_deps = 
-	fastled/FastLED@^3.4.0
 	mobizt/Firebase ESP8266 Client@^3.3.7
+	adafruit/Adafruit NeoPixel@^1.8.5
