Updated SimpleWM and added bitmaps
* Added bitmaps to display the connection state

* Added new html page for SimpleWM, specially customized for matching the IOS App design

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	mobizt/Firebase ESP8266 Client@^3.3.7
 	adafruit/Adafruit NeoPixel@^1.8.5
 	bblanchon/ArduinoTrace
+	arduino-libraries/Arduino_JSON @ 0.1.0
