--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ build_flags = -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
 board = nodemcuv2
 framework = arduino
 lib_deps = 
-	mobizt/Firebase ESP8266 Client@^3.3.7
 	adafruit/Adafruit NeoPixel@^1.8.5
 	bblanchon/ArduinoTrace
 	arduino-libraries/Arduino_JSON @ 0.1.0
+	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.3.7
