Wifi sort fixed, Arduino_JSON replaced with SimpleJSONArray

--- a/platformio.ini
+++ b/platformio.ini
@@ -17,3 +17,4 @@ lib_deps =
 	adafruit/Adafruit NeoPixel@^1.8.5
 	arduino-libraries/Arduino_JSON @ 0.1.0
 	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.3.7
+	bblanchon/ArduinoJson@^6.18.3
