--- a/platformio.ini
+++ b/platformio.ini
@@ -15,4 +15,7 @@ board = nodemcuv2
 framework = arduino
 lib_deps = 
 	adafruit/Adafruit NeoPixel@^1.8.5
-	mobizt/Firebase Arduino Client Library for ESP8266 and ESP32@^2.4.0
+	bblanchon/ArduinoJson@^6.19.1
+upload_speed = 460800
+monitor_speed = 115200
+monitor_filters = esp8266_exception_decoder
