--- a/platformio.ini
+++ b/platformio.ini
@@ -10,7 +10,10 @@
 
 [env:nodemcuv2]
 platform = espressif8266@3.0.0
-build_flags = -D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
+build_flags =
+	-D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
+	;-D FB_DEBUG
+
 board = nodemcuv2
 framework = arduino
 lib_deps = 
@@ -18,3 +21,5 @@ lib_deps =
 upload_speed = 460800
 monitor_speed = 115200
 monitor_filters = esp8266_exception_decoder
+
+	
