--- a/platformio.ini
+++ b/platformio.ini
@@ -9,11 +9,12 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [env:nodemcuv2]
-platform = espressif8266@3.0.0
+platform = espressif8266
 build_flags =
 	-D PIO_FRAMEWORK_ARDUINO_MMU_CACHE16_IRAM48_SECHEAP_SHARED
-	;-D FB_DEBUG
+	-D FB_DEBUG
 
+board_build.filesystem = littlefs
 board = nodemcuv2
 framework = arduino
 lib_deps = 
